순환참조 버그 테스트
