# packages/swagger/swagger.json
@@ -131,28 +131,23 @@
       }
     },
     "/users": {
-      "post": {
+      "get": {
         "tags": [],
         "parameters": [],
-        "requestBody": {
-          "description": "",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/IUser.ICreate1"
-              }
-            }
-          },
-          "required": true,
-          "x-nestia-encrypted": false
-        },
         "responses": {
-          "201": {
+          "200": {
             "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            },
             "x-nestia-encrypted": false
           }
         },
-        "x-nestia-namespace": "users.create",
+        "x-nestia-namespace": "users.test",
         "x-nestia-jsDocTags": []
       }
     }
@@ -391,52 +386,6 @@
           "email",
           "created_at",
           "updated_at"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "IUser.ICreate1": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string"
-          },
-          "email": {
-            "description": "@format email",
-            "x-typia-metaTags": [
-              {
-                "kind": "format",
-                "value": "email"
-              }
-            ],
-            "x-typia-jsDocTags": [
-              {
-                "name": "format",
-                "text": [
-                  {
-                    "text": "email",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string",
-            "format": "email"
-          },
-          "password": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "name",
-          "email",
-          "password"
         ],
         "x-typia-jsDocTags": []
       }
