# src/controllers/users.ts
@@ -1,6 +1,7 @@
 import { IUser } from "@APP/api/structures/user/user";
 import { User } from "@APP/providers/user";
-import { TypedBody, TypedParam, TypedRoute } from "@nestia/core";
+import { BIZUser } from "@APP/providers/user/biz_user";
+import { TypedParam, TypedRoute } from "@nestia/core";
 import { Controller } from "@nestjs/common";
 
 @Controller("users")
@@ -18,8 +19,8 @@ export class UsersController {
         return User.Service.getOne(user_id);
     }
 
-    @TypedRoute.Post()
-    async create(@TypedBody() body: IUser.ICreate1): Promise<void> {
-        return;
+    @TypedRoute.Get()
+    async test(): Promise<boolean> {
+        return BIZUser.Service.getFalse();
     }
 }
